--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active {
+  @apply  bg-logo_blue text-white 
+}
+.listOfNav{
+    @apply px-5 py-1 rounded-md cursor-pointer
+}
