--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+/* importing memories font from google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&family=Rock+Salt&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 .active {
   @apply  bg-logo_blue text-white flex items-center
@@ -10,4 +14,8 @@
 }
 .listOfNav{
     @apply px-5 py-1 rounded-md cursor-pointer
+}
+
+.photoGallary{
+  @apply w-64 h-64 p-3 bg-cover bg-center hover:shadow-xl border border-gray-200 object-cover transition duration-300 transform hover:scale-105
 }
